docs: 移除systemctl 内容到centos7.md